appId: com.tarchpeek.maestro
---
- launchApp:
    clearState: true
- runFlow:
    file: ../shared/connect-valid.yaml
- extendedWaitUntil:
    visible:
      id: video-card-first
    timeout: 45000
- tapOn:
    id: video-card-first
- extendedWaitUntil:
    visible:
      id: player-screen
    timeout: 20000
- back
- extendedWaitUntil:
    notVisible:
      id: player-screen
    timeout: 20000
- extendedWaitUntil:
    visible:
      id: video-card-first
    timeout: 45000
